opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
/* ... */
a, a:visited, a:hover {
	color:#000000;
}

a:hover {
	cursor: pointer;
	text-decoration:underline;
}

.clickable:hover {
  cursor: pointer;
}

.right-aligned {
  float: right;
}

.left-aligned {
  float: left;
}

.small-indent {
	margin-left: 10px;
}

.indent {
	margin-left: 20px;
}

.large-indent {
	margin-left: 30px;
}

.full-width {
	width: 100%;	
}

.not-so-full-width {
	width: 95%;	
}

.block {
  display: block;
}

.inline {
  display: inline;
}

.small-top-margin {
  margin-top: 10px;
}

.top-margin {
  margin-top: 20px;
}

.large-top-margin {
  margin-top: 30px;
}

.loading {
	display: block;
	margin: auto;	
}

.title {
  font-size: 1.3em;
}

.title-bold {
  font-weight: bold;
  color: #444444;
}

.gwt-MenuBar-horizontal .gwt-MenuItem {
	padding-top:3px;
	padding-bottom:5px;
}

.gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
	background-color: transparent;
}

.gwt-MenuBar-vertical .gwt-MenuItem.gwt-MenuItem-selected .subMenuItem-selected {
	background-color: #feede0;
}

.gwt-MenuBarPopup {
    z-index: 1000;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab {
	background:none repeat scroll 0 0 #888888;
	color: #ffffff;
	font-weight:normal;
	-moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; 
	-moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab.gwt-TabLayoutPanelTab-selected {
	background:none repeat scroll 0 0 #C65F00;
	font-weight:normal;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelContent {
	border-color:#BBBBBB;
	border-width:1px 0 0 1px;
}

.gwt-SplitLayoutPanel-HDragger {
	background-color: #B4A291;
}

/* Popup */ 

.gwt-PopupPanel {
	border:5px solid #DDDDDD;
	-moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
}

.notification {
	border:5px solid #222222;
	background-color: #222222;
	opacity: 0.9;
	color:#ffffff;
	-moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
	float:right;
}

.notification.error {
	border-color:#8d0000;
	background-color: #8d0000;
}

.notification .header {
	font-weight:bold;
}

.notification a, .notification a:visited, .notification a:hover {
    color:#ffffff;
    text-decoration: none;
}

/* DialogBox */

.gwt-DialogBox, .gwt-PopupPanelGlass {
    z-index: 1000;
}

.gwt-DialogBox .Caption {
	border-top:5px solid #DDDDDD;
}

.gwt-DialogBox .dialogMiddleCenter {
	padding:0px;
}

.gwt-DialogBox .dialogContent .main {
	padding:10px;
}

.gwt-DialogBox .dialogContent .footer {
	background-color:#ECE5DE;
	border-top:1px solid #B4A291;
}

.gwt-DialogBox .dialogContent .footer .gwt-Button {
	margin-right:10px;
}

.gwt-DialogBox .dialogContent .footer span {
	margin-left:10px;
}

/* CellTable */

.tableList .selected {
	background-color:#DEBB9D;
	color: #000000;
}

/* .GEO005SGB {
	background-color:#DEBB9D;
	color: #000000;
}

.GEO005SP {
	border-bottom:1px solid #6F7277;
	font-weight: normal;
}*/

/* Login */

.login {
	 position:absolute; 
	 top:50%; 
	 left:50%;	 
}

.login > table {
	 border: 3px solid #c65f00;
	 background-color: #ffffff;	 
	 -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
	 padding: 1em;
	 position:absolute; 
	 top:-6em; 
	 left:-12.5em; 
	 width:30em; 
	 height:12em;
}

/* Network Notification */ 

.network-notification .title {
	font-weight: bold; 
	font-size:1.2em;
}

.network-notification .message {
	color: black; 
	font-style:italic;
}

/* Top */

.topbar {
	background-color: #c65f00;
}

.topbar > .gwt-Label {
	color:#FFFFFF;
display:inline;
font-size:1.5em;
font-weight:bold;
margin-left:10px;
}

.topbar a:hover {
	cursor: pointer;
}

.topbar img {
	margin-left: 10px;
	padding-top: 0.3em;
}

.topbar a {
    margin-right: 10px;
    float: right;
    padding-top: 0.6em;
}

.topbar a, .topbar a:visited, .topbar a:hover {
	color:#ffffff;
}

.top .gwt-MenuBar table {
	border-spacing:10px 0;
}

.top .gwt-MenuBar-horizontal {
	background: transparent;
	border: 0px;
	margin-left:40px;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem {
	background-color: #888888;
	color: #cccccc;
	-moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; 
	-moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.selected {
	background-color: #c65f00;
	color: #ffffff;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.gwt-MenuItem-selected {
	background-color: #d78f4e;
	color: #ffffff;
}

/* Foot */

.footbar {
	font-size:0.9em;
	margin-left: 50px;
}

.footbar .gwt-Label {
	display: inline;
	margin-right: 5px;
}

.footbar a {
	color: #000000;
}

/* Content */

.main-content {
	background-color: #ffffff;
	margin:10px 50px 0px 50px;
	border:3px solid #C65F00;
}

/* Workbench */

.workbench .top {
    padding: 0.5em 0 0 1em;
    float: left;
    background:#D78F4E;
    border-bottom:1px solid #B4A291;
    color:#ffffff;
}

.workbench .top .header {
    float: left;
    margin-right:20px;
}

.workbench .top .header .title {
	font-size:1.2em;
	font-weight:bold;
}
  
.workbench .top .summary { 
    margin-top:0.25em;
}
    
.workbench .top .control {
    /*padding: 0.5em;*/
    float: left;
}
    
.workbench .top .control button {
    margin-left: 10px;
    font-size: 0.9em;
    padding:2px 5px;
}

.workbench .main {
}

.workbench .main .title {
    font-weight: bold;
    font-size: 1em;
}

.workbench .main .p {
     padding: 10px;
}

.workbench .information .header {
	color:#444444;
	font-weight:bold;
	height: 2em;
	background:url("gwt/standard/images/hborder.png") repeat-x scroll 0 -2003px #E3E8F3;
	border-bottom:1px solid #B4A291;
}

.workbench .information .header .gwt-Label {
	padding-left:5px;
	padding-top:5px;
}

.workbench .information .header img {
  cursor:pointer;
  padding-top: 5px;
  margin-right: 5px;
}

.workbench .information .header .gwt-MenuItem {
  cursor:default;
  padding-top: 5px;
}

.workbench .information .content {
  margin: 5px;
}

.workbench .information .title {
  font-weight: bold;
  font-size: 1em;
}
/* ... */

